examples/test/testpolicy14435.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14435
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key31: value36
      key24: value23
      key17: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value42
          key3: value5
      podSelector:
        matchLabels:
          key36: value40
          key10: value27
          key20: value32
